Ensure that all quiz modes can be played on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -69,7 +69,7 @@
 .quiz-mode-title {
     font-family: 'Calligraffitti', cursive;
     font-weight: 700;
-    font-size: 3rem;
+    font-size: 2rem;
     letter-spacing: 0.02em;
     color: #f9f1cc;
     line-height: 1.55rem;
